# python_lab4_async

./: README.md  main.py  pyproject.toml
src/: async_base.py  descriptors.py  exceptions.py  executor.py  queue.py  task.py  validators.py
src/task_sources/: api_task_source.py  file_task_source.py  random_task_source.py  validation.py
tests/: test_queue.py  test_sources_funcionality.py  test_task.py  test_task_source_protocol.py  test_task_source_validation.py  test_validators.py
